# scaffold

./: .cursorignore  .cursorrules.md  .cursorrules.ultrasecure.md  .golangci.yml  AGENTS.md  Cargo.toml  FABRIC.md  README.md  TODO.md  exclude
.opencode/agent/: content-writer.md  style-editor.md
docker/: Dockerfile.rust
git/: exclude  pre-commit-rust
github/: rust-build.yml  rust-ci.yml  zizmor.yml
scripts/: fetch_descriptions.sh  init.sh
subagents/: code-auditor.md  security-engineer.md  writer.md
